test/spec_vectors/simd_i64x2_arith/fail/module_11.wat
(module (func $i64x2.mul-arg-empty (result v128) (i64x2.mul)))